# cpp-project-template

./: .clang-tidy  CMakeLists.txt  StdModule.cmake
cmake/: FetchContent.cmake  StdModule.cmake
src/: CMakeLists.txt  Template.cppm  main.cpp
